@@ -46,8 +46,8 @@
       --add-exports io.clientcore.core/io.clientcore.core.implementation.http=ALL-UNNAMED
       --add-exports io.clientcore.core/io.clientcore.core.implementation.http.serializer=ALL-UNNAMED
       --add-exports io.clientcore.core/io.clientcore.core.implementation.utils=ALL-UNNAMED
-      --add-exports io.clientcore.annotation.processor.test/io.clientcore.annotation.processor.test.shared=ALL-UNNAMED
-      --add-opens io.clientcore.annotation.processor.test/io.clientcore.annotation.processor.test.shared=ALL-UNNAMED
+      -add-opens annotation.processor.test/io.clientcore.anntation.processor.test.shared=ALL-UNNAMED
+      --add-exports annotation.processor.test/io.clientcore.anntation.processor.test.shared=ALL-UNNAMED
     </javaModulesSurefireArgLine>
   </properties>
 
